# lpc-development-assistant

./: .gitattributes  .gitignore  BUILD_INFO.md  CHANGELOG.md  Cargo.toml  DEVELOPER_HANDOFF.md  FIXES_APPLIED_20260128.md  ICED_GUI_STATUS.md  PHASE4_VERIFICATION.md  PROJECT_ANALYSIS_20260128.md  QUICK_START.md  RAG_CHANGES_DIFF.md  RAG_UPGRADE_IMPLEMENTATION_GUIDE.md  README.md  README_WSL_SETUP.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  ROADMAP.md  WSL_INTEGRATION_STATUS.md  audit-quality.ps1  build-all-platforms.ps1  build-release.ps1  build.rs  dev_server_log.txt  diagnostic_vm_run.ps1  gui.py  heart_beat_2026-01-18_130519954.c  heart_beat_2026-01-18_130924194.c  heart_beat_2026-01-18_131847151.c  heart_beat_2026-01-19_212927236.c  heart_beat_2026-01-19_213500234.c  model_comparison_output.txt  model_comparison_results.json  pre-build-check.ps1  project-report-01-18.md  start-dev.ps1  summary-01-15.md  summary-01-18.md  summary-01-22.md  tauri.conf.json  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json
audit-results/: audit-report-2026-01-19.md  cargo-audit-20260119-172453.json  cargo-outdated-20260119-172453.txt  cargo-outdated.txt  cargo-test.txt  clippy.txt  cloc-src-20260119-172453.txt  loc.txt
capabilities/: main.json
docs/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_ROADMAP.md  MODEL_LOCK_CHANGES.md  RAG_ENHANCEMENT_GUIDE.md
icons/: icon.icns
mud-references/: all_efuns.txt  merentha_efuns.txt
release-v1.2.0/: RELEASE_NOTES.md
scripts/: create_icon.ps1  extract_mud_references.ps1
src/: context_manager.rs  driver_analyzer.rs  lib.rs  main.rs  model_tester.rs  (+4 more)
(+1835 files in other folders)
