[package]
name = "lpc-dev-assistant"
version = "0.1.0"
edition = "2021"
default-run = "lpc-dev-assistant"

[lib]
name = "lpc_dev_assistant"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.1", optional = true, features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
syntect = "5.2"
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }
iced = { version = "0.9", optional = true }

tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
anyhow = "1.0"
walkdir = "2.5"
tantivy = { version = "0.22", features = ["lz4-compression"] }
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"
regex = "1.9"

[[bin]]
name = "lpc-dev-assistant"
path = "src-tauri/src/main.rs"
required-features = ["with_tauri"]

[[bin]]
name = "test_cli"
path = "src/bin/test_cli.rs"

[[bin]]
name = "run_stream_test"
path = "src/bin/run_stream_test.rs"

[[bin]]
name = "run_ui_tests"
path = "src/bin/run_ui_tests.rs"

[[bin]]
name = "egui_gui"
path = "src/bin/egui_gui.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["iced-gui"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[features]
default = []
with_tauri = ["tauri"]
custom-protocol = ["tauri/custom-protocol"]
iced-gui = ["iced"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
